<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indice_de_masa_corporal"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/peso"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtpeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/kilos"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/estatura"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtaltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/metros"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edadd"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/edades"
            android:inputType="number"
            android:minHeight="48dp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtsexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sexo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/btnsexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/mujer" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btncalcular"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="operar"
            android:text="@string/calcular_imc" />

        <Button
            android:id="@+id/btneliminar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="borrar"
            android:text="@string/eliminar_datos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtimc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imc"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtdescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtbasal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metabolismo_basal"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtideal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/peso_ideal"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imc2"
            app:srcCompat="@drawable/imcppal" />
    </LinearLayout>
</LinearLayout>